syntax = "proto3";

package chat_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/MGomed/auth/pkg/chat_api;chat_api";

service ChatAPI {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMeassage (SendRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
    repeated string usernames = 1;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message SendRequest {
    string                    from      = 1;
    string                    text      = 2;
    google.protobuf.Timestamp timestamp = 3;
}
